openshift/projects/test/routes/cakephp-mysql-example.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: cakephp-mysql-example
    template: cakephp-mysql-example
  name: cakephp-mysql-example
spec:
  host: cakephp-mysql-example-test.apps01.amosdemo.io
  port:
    targetPort: web
  tls:
    termination: edge
  to:
    kind: Service
    name: cakephp-mysql-example
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-11-01T09:38:30Z
      status: "True"
      type: Admitted
    host: cakephp-mysql-example-test.apps01.amosdemo.io
    routerName: router
    wildcardPolicy: None
