openshift/projects/test/routes/jboss.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: jboss
  name: jboss
spec:
  host: jboss-test.apps01.amosdemo.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: jboss
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-12-03T12:54:07Z
      status: "True"
      type: Admitted
    host: jboss-test.apps01.amosdemo.io
    routerName: router
    wildcardPolicy: None
